Detect overflow if app is resizing, fix styles for mobile view

--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,7 @@ code {
 /* width */
 ::-webkit-scrollbar {
   width: 5px;
+  height: 5px;
 }
 
 /* Track */
